RH-2009-04-29-1: Bugfix:     Hedeby: typo in junit_test leads to tcl error
                 Review:     TB

RH-2009-04-29-0: Bugfix:     Hedeby: managed_admin_user test fixed
                 Enhancem.:  Hedeby: new test username_password_auth
                 Review:     MG

DG-2009-04-28-0: Enhancem.:  Added test for issue 2979 which is slightly 
                             modified (therefore it checks a similar case).
                 Review:     CR

CR-2009-04-28-0: Enhancem.:  o jsv_ge_mod test:
                                added new runlevel which tests qalter using
                                jobname instead of job id
                             o analyze_directory_structure():
                                enhanced error reporting
                             o check_shadowd_settings():
                                now using framework functions for remote file
                                operations
                 Review:     RD

RD-2009-04-27-0: Enhancem.:  added test_sge_lock_fifo to module tests
                 Review:     AA

EB-2009-04-27-0: Enhancemn.: eleminated unecessary data in performance test
                 Review:     RD

CR-2009-04-24-2: Bugfix:     rework of auto install test procedures
                 Review:     AA

CR-2009-04-24-1: Enhancem.:  o new command line option: no_local_qmaster_spool
                                If used the qmaster is using 
                                "$SGE_ROOT/$SGE_CELL/spool/qmaster" directory for
                                spooling.
                 Review:     JG

JG-2009-04-24-0: Enhancem.:  extended functional/tight_integration test to cover
                             IZ 2986: Test various scenarios of tightly
                             integrated parallel jobs submitted with the -notify
                             switch.
                 Review:     HP

RD-2009-04-24-0: Bugfix:     fixed reporting test broken due to
                             RD-2009-04-23-0