@@ -1,3 +1,6 @@
+DG-2009-04-29-0: Enhancem.:  Added test for issue 3015. 
+                 Review:     CR
+
 RH-2009-04-29-1: Bugfix:     Hedeby: typo in junit_test leads to tcl error
                  Review:     TB
 
